header logo spacing fix

--- a/src/css/_helpers.sass
+++ b/src/css/_helpers.sass
@@ -148,7 +148,7 @@ $sidebar-switch: $six
     transition: transform .25s ease-in-out
     width: 1.125em
     height: 1.125em
-    background-image: url(/img/icon/right-caret_black.svg)
+    background-image: url(/src/img/icon/right-caret_black.svg)
     background-size: auto 100%
     background-repeat: no-repeat
     background-position: center right
